...
            "state" : "translated",
            "value" : "CPU%lld"
          }
        }
      }
    },
    "Docker" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Docker"
...
            "state" : "translated",
            "value" : "入口與命令"
          }
        }
      }
    },
    "全部" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "All"
...
            "state" : "translated",
            "value" : "執行"
          }
        }
      }
    },
    "执行中…" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Running…"
...
            "state" : "translated",
            "value" : "執行此指令碼所需的服務尚未執行。"
          }
        }
      }
    },
    "执行结果" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Execution result"
...
            "state" : "translated",
            "value" : "執行結果"
          }
        }
      }
    },
    "执行脚本" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Run script"
...
            "state" : "translated",
            "value" : "無限主機數量"
          }
        }
      }
    },
    "日志" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Logs"
...
            "state" : "translated",
            "value" : "正在拉取映像檔"
          }
        }
      }
    },
    "正在检查脚本兼容性…" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Checking script compatibility…"
...
            "state" : "translated",
            "value" : "環境變數"
          }
        }
      }
    },
    "生产" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Production"
...
            "state" : "translated",
            "value" : "確認遠端操作"
          }
        }
      }
    },
    "磁盘" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Disk"
...
            "state" : "translated",
            "value" : "貼上"
          }
        }
      }
    },
    "系统" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "System"
...
            "state" : "translated",
            "value" : "閘道"
          }
        }
      }
    },
    "网络" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Network"
...
            "state" : "translated",
            "value" : "置頂到「常用」"
          }
        }
      }
    },
    "脚本" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Script"
...
            "state" : "translated",
            "value" : "選擇主機"
          }
        }
      }
    },
    "选择主机或分组" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Select hosts or a group"
...
