...
            "state" : "translated",
            "value" : "最大目錄 Top 20"
          }
        }
      }
    },
    "容器列表" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Container list"
...
            "state" : "translated",
            "value" : "容器列表"
          }
        }
      }
    },
    "容器资源占用" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Container resource usage"
...
            "state" : "translated",
            "value" : "磁碟"
          }
        }
      }
    },
    "磁盘使用" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Disk usage"
...
            "state" : "translated",
            "value" : "系統"
          }
        }
      }
    },
    "系统日志尾部" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tail system log"
...
            "state" : "translated",
            "value" : "系統日誌尾部"
          }
        }
      }
    },
    "系统概览" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "System overview"
...
